<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@drawable/home"
        app:showAsAction="withText"/>

    <item android:id="@+id/action_chat"
        android:title="@string/menu_chat"
        android:icon="@drawable/chat"
        app:showAsAction="withText" />

    <!--
    <item android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/home2"
        app:showAsAction="withText"/>
-->

    <item android:id="@+id/action_playing"
        android:title="@string/menu_playing"
        android:icon="@drawable/playing"
        app:showAsAction="withText"/>
</menu>