<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mindfulmoments.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/main_intro" />

    <!-- row one -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center">

            <ImageView
                android:id="@+id/happy"
                style="@style/image"
                android:src="@drawable/happiness" />

            <TextView
                style="@style/text"
                android:layout_below="@+id/happy"
                android:text="@string/happy" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:gravity="center">

            <ImageView
                android:id="@+id/sad"
                style="@style/image"
                android:src="@drawable/sadness" />

            <TextView
                style="@style/text"
                android:layout_below="@+id/sad"
                android:text="@string/sad" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/purple"
            android:gravity="center">

            <ImageView
                android:id="@+id/angry"
                style="@style/image"
                android:src="@drawable/anger" />

            <TextView
                style="@style/text"
                android:layout_below="@+id/angry"
                android:text="@string/angry" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/teal"
            android:gravity="center">

            <ImageView
                android:id="@+id/anxious"
                style="@style/image"
                android:src="@drawable/fear" />

            <TextView
                style="@style/text"
                android:layout_below="@+id/anxious"
                android:text="@string/anxious" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="@color/translucent_purple"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/my_navigation_items" />

</LinearLayout>
